--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/cart.js" defer></script>
 	<script src="js/search.js" defer></script>
+	<script src="js/getData.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
